--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
 
 <body>
     <div class="gallery-wrap">
-        <img src="img/arrow_left.png" alt="" id="backBtn">
+        <img class="button1" src="img/arrow_left.png" alt="" id="backBtn">
         <div class="gallery">
             <div>
                 <span><img src="img/city.jpg" alt=""></span>
                 <span><img src="img/hole.jpg" alt=""></span>
-                <span><img src="img/owl.jpg" alt=""></span>
+                <span><img src="img/ctulhu.jpg" alt=""></span>
             </div>
             <div>
                 <span><img src="img/greatmagician.jpg" alt=""></span>
                 <span><img src="img/humantree.jpg" alt=""></span>
                 <span><img src="img/dragonreaper.jpg" alt=""></span>
             </div>
+            <div>
+                <span><img src="img/owl.jpg" alt=""></span>
+                <span><img src="img/london.jpg" alt=""></span>
+                <span><img src="img/doctor.jpg" alt=""></span>
+            </div>
         </div>
-        <img src="img/arrow_right.png" alt="" id="nextBtn">
+        <img class="button2" src="img/arrow_right.png" alt="" id="nextBtn">
     </div>
     <script src="script1.js"></script>
 </body></html>
